tmux: Session picker w/ <prefix> c-p

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -159,3 +159,5 @@ set -sa terminal-overrides ',*:ed@'
 #setw -g window-active-style fg=color07
 
 set-option -gw mode-style fg=color07,bg=color19
+
+bind C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='' | xargs tmux switch-client -t"
