--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -93,9 +93,10 @@ setw -g pane-border-status top
 setw -g pane-border-format ''
 setw -g pane-border-line heavy
 set -sg pane-border-format \
-  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]#{?pane_active,#[fg=colour6],}#{?pane_active,#[bold],#[fg=color19,bold]}#[align=right]#{?pane_active,,─[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]}#[default]'
+  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]#{?pane_active,#[fg=colour6],}#{?pane_active,#[bold],#[fg=color19,bold]}#[align=right]─[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]#[default]'
 
-setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
+#setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
+setw -g status-right ''
 setw -g pane-border-indicators off
 
 #bind-key C-s send-prefix
