--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -60,7 +60,6 @@ bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M"
 
 bind -n C-l send-keys -R C-l \; clear-history
 
-
 # Copy mode
 setw -g mode-keys vi
 bind-key -T copy-mode-vi v send-keys -X begin-selection
@@ -70,7 +69,6 @@ bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
 bind Enter copy-mode
 #setw -g utf8 on
-
 
 # Basic styles
 set -g status-interval 5
@@ -148,3 +146,9 @@ set -sa terminal-overrides ',*:ed@'
 set-option -gw mode-style fg=color07,bg=color19
 
 bind C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='' | xargs tmux switch-client -t"
+
+# Popups
+unbind-key g
+bind-key g popup -h 90% -w 90% -E -d '#{pane_current_path}' "lazygit"
+
+
