feat: tmux: lazygit popup style enhancements

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -149,6 +149,5 @@ bind C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$
 
 # Popups
 unbind-key g
-bind-key g popup -h 90% -w 90% -E -d '#{pane_current_path}' "lazygit"
-
+bind-key g popup -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ Lazygit ]#[default]' "lazygit"
 
