feat: tmux: <prefix>E to edit tmux.conf in popup

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -151,3 +151,6 @@ bind C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$
 unbind-key g
 bind-key g popup -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ Lazygit ]#[default]' "lazygit"
 
+unbind-key E
+bind-key E popup -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][
+~/.tmux.conf ]#[default]' 'zsh -l -c "nvim ~/.tmux.conf && tmux source-file ~/.tmux.conf"'
