--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ nvim/lua/dev/*
 !nvim/lua/dev/cmp-atuin
 !nvim/lua/dev/nvim-base16
 !nvim/lua/dev/base16-live-reload.nvim
+!nvim/lua/dev/todos-lualine.nvim
 gh/hosts.yml
