--- a/.gitmodules
+++ b/.gitmodules
@@ -11,3 +11,6 @@
 [submodule "openingh"]
     path = nvim/lua/dev/openingh.nvim
     url = git@github.com:bezhermoso/openingh.nvim.git
+[submodule "nvim/lua/dev/todos-lualine.nvim"]
+	path = nvim/lua/dev/todos-lualine.nvim
+	url = git@github.com:bezhermoso/todos-lualine.nvim.git
