--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "nvim/lua/dev/todos-lualine.nvim"]
 	path = nvim/lua/dev/todos-lualine.nvim
 	url = git@github.com:bezhermoso/todos-lualine.nvim.git
+[submodule "nvim/lua/dev/base16-live-reload.nvim"]
+	path = nvim/lua/dev/base16-live-reload.nvim
+	url = git@github.com:bezhermoso/base16-live-reload.nvim.git
