fix: tmux: Fix list-keys -N output by adding notes to key-bindings + remove SSH-conditional for setting prefix key

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -4,7 +4,10 @@ TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m --preview=''"
 
 set-option -g default-terminal "tmux-256color"
 set-option -g escape-time 1
-if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' ''
+unbind C-b
+set -g prefix C-s
+set -g prefix2 C-s
+# if-shell '[ -z "$SSH_TTY" ] && [ -z "$SSH_CLIENT" ] && [ -z "$SSH_CONNECTION" ]' 'unbind C-b; set -g prefix C-Space; set -g prefix2 C-s' ''
 set-option -g allow-rename off
 set-option -g history-limit 50000
 set-option -gs history-file "~/.tmux-history.log"
@@ -15,7 +18,7 @@ set-option -g allow-passthrough on
 
 set-option -g repeat-time 1250
 unbind-key r
-bind-key r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
+bind-key -N "Reload tmux configuration" r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 
 #set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
@@ -26,39 +29,39 @@ unbind Left
 unbind c
 unbind !
 
-bind-key -r s select-pane -t :.+
+bind-key -N "Cycle through panes" -r s select-pane -t :.+
 
-bind-key n new-window -c '#{pane_current_path}'
+bind-key -N "Create new window" n new-window -c '#{pane_current_path}'
 
 # Navigation
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind-key -r p next-window
-bind-key -r o previous-window
+bind -N "Select pane below" j select-pane -D
+bind -N "Select pane above" k select-pane -U
+bind -N "Select pane to the right" h select-pane -L
+bind -N "Select pane to the left" l select-pane -R
+bind-key -N "Next window" -r p next-window
+bind-key -N "Previous window" -r o previous-window
 
 # Resize
-bind-key -r J resize-pane -D
-bind-key -r K resize-pane -U
-bind-key -r H resize-pane -L
-bind-key -r L resize-pane -R
-bind-key -r C-k resize-pane -U 5
-bind-key -r C-j resize-pane -D 5
-bind-key -r C-h resize-pane -L 5
-bind-key -r C-l resize-pane -R 5
+bind-key -N "Resize pane downwards" -r J resize-pane -D
+bind-key -N "Resize pane upwards" -r K resize-pane -U
+bind-key -N "Resize pane to the left" -r H resize-pane -L
+bind-key -N "Resize pane to the right" -r L resize-pane -R
+bind-key -N "Resize pane 5 lines downwards"  -r C-j resize-pane -D 5
+bind-key -N "Resize pane 5 lines upwards"  -r C-k resize-pane -U 5
+bind-key -N "Resize pane 5 lines to the left" -r C-h resize-pane -L 5
+bind-key -N "Resize pane 5 lines to the right" -r C-l resize-pane -R 5
 
 # Splitting
-bind \\ split-window -h -c '#{pane_current_path}'
-bind - split-window -v -c '#{pane_current_path}'
-bind | split-window -fh -c '#{pane_current_path}' -p 33
-bind _ split-window -fv -c '#{pane_current_path}' -p 33
+bind -N "New vertically split" \\ split-window -h -c '#{pane_current_path}'
+bind -N "New horizontal split" - split-window -v -c '#{pane_current_path}'
+bind -N "New 33%-wide vertical split" | split-window -fh -c '#{pane_current_path}' -p 33
+bind -N "New 33%-high horizontal split" _ split-window -fv -c '#{pane_current_path}' -p 33
 
 set-option -g -q mouse on
 bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-bind -n C-l send-keys -R C-l \; clear-history
+bind -N "Clear scrollback buffer (both tmux & shell)" -n C-l send-keys -R C-l \; clear-history
 
 # Copy mode
 setw -g mode-keys vi
@@ -100,13 +103,13 @@ setw -g pane-border-indicators off
 #bind-key C-s send-prefix
 
 # Window Management
-bind-key c-w choose-window -F "Swap with #{window_index}: #{window_name}" "swap-window -t %1"
-bind-key m choose-window -F "Join horizontal with #{window_index}: #{window_name}" "join-pane -h -t %%"
-bind-key M choose-window -F "Join vertical with #{window_index}: #{window_name}" "join-pane -v -t %%"
-bind-key -r / swap-pane
-bind-key & set-window-option synchronize-panes
+bind-key -N "Swap with..." c-w choose-window -F "Swap with #{window_index}: #{window_name}" "swap-window -t %1"
+bind-key -N "Join as horizontal split with..." m choose-window -F "Join horizontal with #{window_index}: #{window_name}" "join-pane -h -t %%"
+bind-key -N "Join as vertical split with..." M choose-window -F "Join vertical with #{window_index}: #{window_name}" "join-pane -v -t %%"
+bind-key -N "Swap pane" -r / swap-pane
+bind-key -N "Sychronize panes" & set-window-option synchronize-panes
 
-bind-key Q confirm-before -p "Kill session #S? (y/n)" kill-session
+bind-key -N "Kill session..." Q confirm-before -p "Kill session #S? (y/n)" kill-session
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
@@ -135,9 +138,9 @@ set -g @plugin 'tinted-theming/base16-tmux'
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 if-shell '[ -f ~/.tmux/plugins/tpm/tpm ]' "run '~/.tmux/plugins/tpm/tpm'"
 
-bind @ break-pane
+bind -N "Move pane to its own window" @ break-pane
 set-option -g display-time 3000
-bind-key X confirm-before -p "Kill window #W? (y/n)" kill-window
+bind-key -N "Close window..." X confirm-before -p "Kill window #W? (y/n)" kill-window
 
 set -sa terminal-overrides ',*:ed@'
 #setw -g window-style fg=color08
@@ -145,11 +148,11 @@ set -sa terminal-overrides ',*:ed@'
 
 set-option -gw mode-style fg=color07,bg=color19
 
-bind C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='' | xargs tmux switch-client -t"
+bind -N "Switch to session from picker..." C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='' | xargs tmux switch-client -t"
 
 # Popups
 unbind-key g
-bind-key g popup -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ Lazygit ]#[default]' "lazygit"
+bind-key -N "Popup: Lazygit" g popup -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ Lazygit ]#[default]' "lazygit"
 
 unbind-key E
-bind-key E popup -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ ~/.tmux.conf ]#[default]' 'zsh -l -c "nvim ~/.tmux.conf && tmux source-file ~/.tmux.conf && tmux display-message Reloaded"'
+bind-key -N "Popup: Edit & reload tmux configuration" E popup -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ ~/.tmux.conf ]#[default]' 'zsh -l -c "nvim ~/.tmux.conf && tmux source-file ~/.tmux.conf && tmux display-message Reloaded"'
