--- a/.gitmodules
+++ b/.gitmodules
@@ -11,10 +11,7 @@
 [submodule "openingh"]
     path = .config/nvim/lua/dev/openingh.nvim
     url = git@github.com:bezhermoso/openingh.nvim.git
-[submodule ".config/nvim/lua/dev/todos-lualine.nvim"]
-	path = .config/nvim/lua/dev/todos-lualine.nvim
-	url = git@github.com:bezhermoso/todos-lualine.nvim.git
-[submodule ".config/nvim/lua/dev/base16-live-reload.nvim"]
+[submodule "base16-live-reload.nvim"]
 	path = .config/nvim/lua/dev/base16-live-reload.nvim
 	url = git@github.com:bezhermoso/base16-live-reload.nvim
 [submodule "todos-lualine.nvim"]
