fix .stow-local-ignore: top-level dirs/files

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,23 +1,22 @@
 \.git.*
 \.DS_Store
-Makefile
-preview.png
-README.md
-applescripts
-base16-fzf
-base16-shell
-bin
-fzf
-gh
-git
-hammerspoon
-homebrew
-languages
-mycli
-notes
-pgcli
-tig
-vim
-workflows
-yazi
-zsh
+^/Makefile
+^/preview.png
+^/README.md
+^/applescripts
+^/base16-fzf
+^/base16-shell
+^/bin
+^/fzf
+^/gh
+^/git
+^/hammerspoon
+^/homebrew
+^/languages
+^/mycli
+^/notes
+^/pgcli
+^/tig
+^/vim
+^/workflows
+^/zsh
