fix: tmux: Update references to conf file in tmux.conf bindings

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -18,7 +18,7 @@ set-option -g allow-passthrough on
 
 set-option -g repeat-time 1250
 unbind-key r
-bind-key -N "Reload tmux configuration" r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
+bind-key -N "Reload tmux configuration" r source-file ~/.config/tmux/tmux.conf \; display-message "Configuration reloaded"
 
 #set-option -ga update-environment ' TMUX_BORDER_BG TMUX_BORDER_FG_ACTIVE TMUX_BORDER_FG TMUX_BORDER_FG_ACTIVE BACKGROUND BASE16-FLAVOR POWERLINE_CONFIG_OVERRIDES'
 
@@ -155,4 +155,7 @@ unbind-key g
 bind-key -N "Popup: Lazygit" g popup -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ Lazygit ]#[default]' "lazygit"
 
 unbind-key E
-bind-key -N "Popup: Edit & reload tmux configuration" E popup -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ ~/.tmux.conf ]#[default]' 'zsh -l -c "nvim ~/.tmux.conf && tmux source-file ~/.tmux.conf && tmux display-message Reloaded"'
+bind-key -N "Popup: Edit & reload tmux configuration" E popup \
+  -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' \
+  -T '#[bold,align=centre][ TMUX configuration ]#[default]' \
+  'zsh -l -c "nvim ~/.tmux.conf && tmux source-file ~/.tmux.conf && tmux display-message Reloaded"'
