fix: tmux: fix colors & styling

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -82,19 +82,26 @@ setw -g window-status-format \
   "#[bg=color19,fg=color00,bold] #{window_index} #[default] #[fg=color19,bold]#{window_name}#[default]"
 
 setw -g window-status-current-format \
-  "#[fg=yellow]#[default]#[bg=color01,bold]#{?pane_synchronized, ↔,} #{window_index} #[default] #[fg=color01,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]"
+'#[fg=yellow]#[default]#[bg=color01,bold,fg=color15]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
+' #[fg=color01,underscore,bold]#{window_name}#[default]#[fg=color08]#{?window_zoomed_flag, (z),}#[default]'
 
 setw -g window-status-separator "  "
 
 setw -g status-left \
-  '#[bold]#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18],#[fg=color11]} #{session_name} #[default,bold]#{?client_prefix,#[fg=color10],#[fg=color11]}>>  '
+'#[bold]#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18],#[fg=color11]} #{session_name} '\
+'#[default,bold]#{?client_prefix,#[fg=color10],#[fg=color11]}>>  '
 
 setw -g pane-border-status top
 
 setw -g pane-border-format ''
-setw -g pane-border-line heavy
+setw -g pane-border-line single
+setw -g pane-border-style fg=color08
+setw -g pane-active-border-style fg=color02
 set -sg pane-border-format \
-  '#{?pane_active,#[bg=color16],#[fg=color16]} #{pane_index} #[default]#{?pane_active,#[fg=colour6],}#{?pane_active,#[bold],#[fg=color19,bold]}#[align=right]─[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]#[default]'
+'#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
+' #{pane_index} #[default]'\
+'#[align=right]#{?pane_active,#[fg=colour06],}'\
+'#{?pane_active,#[bold],#[fg=color19,bold]}[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]#[default]'
 
 #setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
 setw -g status-right ''
@@ -103,9 +110,12 @@ setw -g pane-border-indicators off
 #bind-key C-s send-prefix
 
 # Window Management
-bind-key -N "Swap with..." c-w choose-window -F "Swap with #{window_index}: #{window_name}" "swap-window -t %1"
-bind-key -N "Join as horizontal split with..." m choose-window -F "Join horizontal with #{window_index}: #{window_name}" "join-pane -h -t %%"
-bind-key -N "Join as vertical split with..." M choose-window -F "Join vertical with #{window_index}: #{window_name}" "join-pane -v -t %%"
+bind-key -N "Swap with..." c-w choose-window \
+  -F "Swap with #{window_index}: #{window_name}" "swap-window -t %1"
+bind-key -N "Join as horizontal split with..." m choose-window \
+  -F "Join horizontal with #{window_index}: #{window_name}" "join-pane -h -t %%"
+bind-key -N "Join as vertical split with..." M choose-window \
+  -F "Join vertical with #{window_index}: #{window_name}" "join-pane -v -t %%"
 bind-key -N "Swap pane" -r / swap-pane
 bind-key -N "Sychronize panes" & set-window-option synchronize-panes
 
@@ -148,11 +158,15 @@ set -sa terminal-overrides ',*:ed@'
 
 set-option -gw mode-style fg=color07,bg=color19
 
-bind -N "Switch to session from picker..." C-p display-popup -E "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='' | xargs tmux switch-client -t"
+bind -N "Switch to session from picker..." C-p display-popup -E \
+  "tmux list-sessions | sed -E 's/:.*$//' | grep -v \"^$(tmux display-message -p '#S')\$\" | fzf --reverse --preview='' | xargs tmux switch-client -t"
 
 # Popups
 unbind-key g
-bind-key -N "Popup: Lazygit" g popup -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' -T '#[bold,align=centre][ Lazygit ]#[default]' "lazygit"
+bind-key -N "Popup: Lazygit" g popup \
+  -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' \
+  -T '#[bold,align=centre][ Lazygit ]#[default]' \
+  "lazygit"
 
 unbind-key E
 bind-key -N "Popup: Edit & reload tmux configuration" E popup \
