--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -172,4 +172,4 @@ unbind-key E
 bind-key -N "Popup: Edit & reload tmux configuration" E popup \
   -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' \
   -T '#[bold,align=centre][ TMUX configuration ]#[default]' \
-  'zsh -l -c "nvim ~/.tmux.conf && tmux source-file ~/.tmux.conf && tmux display-message Reloaded"'
+  'zsh -l -c "nvim ~/.config/tmux/tmux.conf && tmux source-file ~/.config/tmux/tmux.conf && tmux display-message Reloaded"'
