--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -173,3 +173,6 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
   -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' \
   -T '#[bold,align=centre][ TMUX configuration ]#[default]' \
   'zsh -l -c "nvim ~/.config/tmux/tmux.conf && tmux source-file ~/.config/tmux/tmux.conf && tmux display-message Reloaded"'
+
+  # List keys including those without notes
+  bind-key ? list-keys -Na
