Update brew inventory

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,269 +1,132 @@
-tap "mopidy/mopidy"
-tap "eugenmayer/dockersync"
-tap "mkdryden/misc"
-tap "homebrew/fuse"
-tap "homebrew/completions"
-tap "homebrew/core"
-tap "homebrew/php"
+tap "dart-lang/dart"
 tap "homebrew/bundle"
-tap "homebrew/services"
-tap "d12frosted/emacs-plus"
-tap "rogual/neovim-dot-app"
-tap "caskroom/drivers"
-tap "caskroom/fonts"
-tap "caskroom/versions"
-tap "caskroom/cask"
-tap "manifoldco/brew"
-tap "neovim/neovim"
-cask "java"
-cask "osxfuse"
-brew "oniguruma"
-brew "jq"
-brew "ansiweather"
-brew "archey"
-brew "autoconf"
-brew "automake"
-brew "bash"
-brew "bfg"
-brew "boost"
-brew "gettext"
-brew "pixman"
-brew "cairo"
-brew "lua"
-brew "cclive"
-brew "coreutils"
-brew "cowsay"
-brew "cscope"
-brew "ctags"
+tap "homebrew/cask-fonts"
+tap "homebrew/core"
+tap "mikescher/tap"
+tap "noahgorstein/tap"
+tap "sass/sass"
+tap "shivammathur/php"
+brew "atuin"
+brew "readline"
+brew "awscli"
+brew "b2-tools"
+brew "bat"
+brew "bat-extras"
+brew "btop"
+brew "caddy"
+brew "openldap"
 brew "curl"
+brew "freetds"
+brew "krb5"
+brew "libpq"
+brew "libzip"
+brew "php"
+brew "composer"
 brew "diff-so-fancy"
-brew "libgpg-error"
-brew "libassuan"
-brew "libgcrypt"
-brew "libksba"
-brew "pth"
-brew "dirmngr"
-brew "dnsmasq"
-brew "dos2unix"
-brew "git"
-brew "drafter", args: ["HEAD"]
-brew "duck"
-brew "exiftool"
-brew "faac"
-brew "fasd"
-brew "lame"
-brew "x264"
-brew "xvid"
+brew "direnv"
+brew "dog"
+brew "duf"
+brew "dust"
+brew "fd"
+brew "gnutls"
+brew "leptonica"
+brew "tesseract"
 brew "ffmpeg"
-brew "gmp"
-brew "figlet"
-brew "pcre2"
-brew "fish"
 brew "fortune"
-brew "fpp"
-brew "libtool"
-brew "freetds", args: ["with-unixodbc"]
-brew "fswatch"
 brew "fzf"
-brew "gdbm"
-brew "gifsicle"
+brew "gh"
+brew "git"
+brew "git-delta"
 brew "git-extras"
-brew "git-lfs"
-brew "git-standup"
-brew "libunistring"
-brew "nettle"
-brew "gnu-typist"
-brew "libusb"
-brew "pinentry"
+brew "gitui"
 brew "gnupg"
-brew "gpg-agent"
-brew "graphicsmagick"
-brew "sqlite"
-brew "icu4c"
-brew "heroku"
-brew "highlight"
+brew "go"
+brew "gpgme"
+brew "helm"
+brew "ncurses"
 brew "htop"
 brew "httpie"
-brew "hub"
-brew "imagemagick"
-brew "ispell"
-brew "jhead"
-brew "jid"
-brew "jmeter"
-brew "jrnl"
-brew "kubernetes-cli"
-brew "ldapvi"
-brew "libav"
-brew "libevent"
-brew "libtermkey"
-brew "libusb-compat"
-brew "libuv"
-brew "libvterm"
-brew "libxml2"
-brew "lolcat"
-brew "lorem"
-brew "lzo"
-brew "magic-wormhole"
-brew "markdown"
-brew "mhash"
-brew "mcrypt"
-brew "moreutils", args: ["without-parallel"]
-brew "mosh"
-brew "mpc"
-brew "msgpack"
-brew "tokyo-cabinet"
-brew "mutt"
-brew "mycli"
-brew "mysql", restart_service: true
-brew "ncmpcpp", args: ["with-clock", "with-outputs", "with-visualizer"]
-brew "unibilium"
+brew "hunspell"
+brew "jq"
+brew "lazygit"
+brew "libffi"
+brew "lnav"
+brew "ncdu"
+brew "neofetch"
 brew "neovim"
+brew "node-build"
 brew "nodenv"
-brew "nzbget"
-brew "openvpn"
+brew "openssl@1.1"
 brew "pandoc"
-brew "parallel"
-brew "pgcli"
-brew "pinentry-mac"
-brew "postgresql"
-brew "pv"
+brew "perl"
 brew "pyenv"
 brew "pyenv-virtualenv"
-brew "qrencode"
 brew "ranger"
-brew "ruby-build"
 brew "rbenv"
-brew "re2c"
-brew "reattach-to-user-namespace"
 brew "ripgrep"
-brew "scons"
-brew "screenfetch"
-brew "siege"
-brew "source-highlight"
-brew "speedtest-cli"
-brew "ssh-copy-id"
-brew "sshfs"
-brew "subliminal"
+brew "sd"
+brew "stow"
 brew "telnet"
-brew "the_silver_searcher"
 brew "tig"
 brew "tmux"
-brew "translate-shell"
-brew "transmission"
 brew "tree"
-brew "tty-clock"
-brew "unison"
-brew "unixodbc"
-brew "utf8proc"
-brew "vagrant-completion"
-brew "vault"
-brew "vegeta"
-brew "w3m"
+brew "universal-ctags"
 brew "watch"
-brew "watchman", args: ["HEAD"]
+brew "watchexec"
 brew "wget"
-brew "wiki"
-brew "youtube-dl"
-brew "zplug"
-brew "zsh"
-brew "zsh-completions"
-brew "zsh-lovers"
-brew "d12frosted/emacs-plus/emacs-plus", args: ["with-natural-title-bar"]
-brew "eugenmayer/dockersync/unox"
-brew "homebrew/php/composer"
-brew "homebrew/php/php71"
-brew "homebrew/php/phpbrew"
-brew "homebrew/php/terminus"
-brew "manifoldco/brew/torus"
-brew "mkdryden/misc/namei"
-cask "1password"
-cask "adobe-reader"
-cask "airdroid"
-cask "alfred"
-cask "android-sdk"
-cask "android-studio"
-cask "apache-directory-studio"
+brew "wget2"
+brew "xh"
+brew "yazi"
+brew "yt-dlp"
+brew "zoxide"
+brew "mikescher/tap/dops"
+brew "noahgorstein/tap/jqp"
+brew "sass/sass/sass"
+brew "shivammathur/php/php@7.3"
+brew "shivammathur/php/php@7.4"
+cask "1password-cli"
+cask "airbuddy"
 cask "appcleaner"
-cask "atom"
+cask "arc"
+cask "backblaze"
 cask "bartender"
-cask "beamer"
-cask "beardedspice"
-cask "bettertouchtool"
-cask "camtasia"
-cask "caption"
+cask "betterdisplay"
 cask "cheatsheet"
-cask "coconutbattery"
-cask "colorpicker-skalacolor"
-cask "cyberduck"
 cask "daisydisk"
+cask "dash"
 cask "discord"
 cask "docker"
-cask "dropbox"
-cask "endurance"
 cask "fantastical"
-cask "firefox"
-cask "flash-player"
-cask "flux"
-cask "genymotion"
-cask "gitbook-editor"
-cask "github-desktop"
-cask "goofy"
-cask "google-backup-and-sync"
+cask "font-jetbrains-mono"
+cask "font-jetbrains-mono-nerd-font"
 cask "google-chrome"
+cask "google-cloud-sdk"
 cask "google-drive"
-cask "google-play-music-desktop-player"
-cask "gravitdesigner"
-cask "hammerspoon"
+cask "hazel"
 cask "iina"
-cask "intellij-idea-ce"
+cask "imageoptim"
 cask "istat-menus"
 cask "iterm2"
+cask "jellyfin"
 cask "jetbrains-toolbox"
-cask "karabiner"
-cask "keepingyouawake"
-cask "keybase"
-cask "lacona"
-cask "lastpass"
-cask "launchbar"
-cask "little-snitch"
-cask "malwarebytes-anti-malware"
-cask "micro-snitch"
-cask "minikube"
-cask "ngrok"
-cask "opera"
-cask "oversight"
-cask "panda"
-cask "paw"
-cask "phpstorm"
+cask "launchcontrol"
+cask "logi-options-plus"
+cask "macupdater"
+cask "marked"
+cask "mimestream"
+cask "notion"
+cask "obsidian"
+cask "orbstack"
+cask "pdf-expert"
 cask "pocket-casts"
-cask "reactotron"
-cask "rightfont"
-cask "sequel-pro"
-cask "skype"
-cask "spectacle"
-cask "steam"
-cask "the-unarchiver"
-cask "thunderbird"
-cask "torbrowser"
-cask "transmission"
-cask "ubar"
-cask "unified-remote"
-cask "vagrant"
-cask "vanilla"
-cask "vimr"
-cask "virtualbox"
-cask "visual-studio-code"
-cask "vlc"
-cask "vox"
-cask "whatsapp"
-cask "windscribe"
-cask "wireshark"
-cask "caskroom/drivers/fitbit-connect"
-cask "caskroom/fonts/font-droid-sans-mono"
-cask "caskroom/fonts/font-fira-code"
-cask "caskroom/fonts/font-fira-mono"
-cask "caskroom/fonts/font-hack"
-cask "caskroom/versions/google-chrome-canary"
-cask "caskroom/versions/iterm2-beta"
-cask "caskroom/versions/iterm2-nightly"
-cask "caskroom/versions/safari-technology-preview"
+cask "raycast"
+cask "rocket-typist"
+cask "screens"
+cask "shottr"
+cask "slack"
+cask "soundsource"
+cask "spotify"
+cask "tailscale"
+cask "textual"
+cask "transmit"
+cask "via"
