feat: tmux: Load tpm from ~/.config/tmux/* directory

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -146,7 +146,13 @@ set -g @plugin 'sainnhe/tmux-fzf'
 set -g @plugin 'tinted-theming/base16-tmux'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-if-shell '[ -f ~/.tmux/plugins/tpm/tpm ]' "run '~/.tmux/plugins/tpm/tpm'"
+if-shell '[ ! -f ~/.config/tmux/plugins/tpm/tpm ]' "display-message 'Install tpm!'"
+if-shell '[ -f ~/.config/tmux/plugins/tpm/tpm ]' "run '~/.config/tmux/plugins/tpm/tpm'"
+
+
+#################################################################################
+# CONFIGURATION THAT NEEDS TO OVERRIDE SETTINGS AND BINDINGS FROM tpm & plugins #
+#################################################################################
 
 bind -N "Move pane to its own window" @ break-pane
 set-option -g display-time 3000
@@ -174,5 +180,5 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
   -T '#[bold,align=centre][ TMUX configuration ]#[default]' \
   'zsh -l -c "nvim ~/.config/tmux/tmux.conf && tmux source-file ~/.config/tmux/tmux.conf && tmux display-message Reloaded"'
 
-  # List keys including those without notes
-  bind-key ? list-keys -Na
+# List keys including those without notes
+bind-key ? list-keys -Na
