--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,9 @@
 [submodule "base16-live-reload.nvim"]
 	path = .config/nvim/lua/dev/base16-live-reload.nvim
 	url = git@github.com:bezhermoso/base16-live-reload.nvim
+[submodule "tpm"]
+	path = .config/tmux/plugins/tpm
+	url = git@github.com:tmux-plugins/tpm.git
 [submodule "todos-lualine.nvim"]
 	path = .config/nvim/lua/dev/todos-lualine.nvim
 	url = git@github.com:bezhermoso/todos-lualine.nvim
