chore: move mycli/pgcli config to .config/* dir

--- a/.stow-local-ignore
+++ b/.stow-local-ignore
@@ -1,6 +1,9 @@
 \.git.*
 \.DS_Store
-\.stowrc
+
+^\.rgignore
+^\.stowrc
+
 ^/Makefile
 ^/preview.png
 ^/README.md
@@ -21,3 +24,4 @@
 ^/vim
 ^/workflows
 ^/zsh
+^/terminfo
