feat: homebrew: bunch of new casks

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -95,6 +95,7 @@ cask "betterdisplay"
 cask "cheatsheet"
 cask "daisydisk"
 cask "dash"
+cask "diffusionbee"
 cask "discord"
 cask "docker"
 cask "fantastical"
@@ -104,12 +105,14 @@ cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive"
 cask "hazel"
+cask "hovrly"
 cask "iina"
 cask "imageoptim"
 cask "istat-menus"
 cask "iterm2"
 cask "jellyfin"
 cask "jetbrains-toolbox"
+cask "latest"
 cask "launchcontrol"
 cask "logi-options-plus"
 cask "macupdater"
@@ -120,7 +123,9 @@ cask "obsidian"
 cask "orbstack"
 cask "pdf-expert"
 cask "pocket-casts"
+cask "quiet-reader"
 cask "raycast"
+cask "rectangle-pro"
 cask "rocket-typist"
 cask "screens"
 cask "shottr"
@@ -128,6 +133,7 @@ cask "slack"
 cask "soundsource"
 cask "spotify"
 cask "tailscale"
+cask "tempbox"
 cask "textual"
 cask "transmit"
 cask "via"
