feat: homebrew: Manage host-specific Brewfile i.e. homebrew/ithildin/Brewfile

--- a/homebrew/ithildin/Brewfile
+++ b/homebrew/ithildin/Brewfile
@@ -1,5 +1,6 @@
 tap "dart-lang/dart"
 tap "homebrew/bundle"
+tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "mikescher/tap"
