fix: tmux: fix colors & styling

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -79,13 +79,13 @@ set -g status-bg color00
 
 #More advanced styles
 setw -g window-status-format \
-  "#[bg=color19,fg=color00,bold] #{window_index} #[default] #[fg=color19,bold]#{window_name} #[default]"
+  "#[bg=color19,fg=color00,bold] #{window_index} #[default]#[fg=color00,bold,bg=color18] #{window_name} #[default]"
 
 setw -g window-status-current-format \
-'#[fg=yellow]#[default]#[bg=color01,bold,fg=color15]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
-' #[fg=color01,underscore,bold]#{window_name}#[default] #[fg=color08]#{?window_zoomed_flag, (z),}#[default]'
+'#[fg=yellow]#[default]#[bg=color01,bold,fg=color19]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
+'#[fg=color01,bg=color18,bold] #{window_name}#[bg=color18] #{?window_zoomed_flag,󰩨 ,}#[default]'
 
-setw -g window-status-separator "  "
+setw -g window-status-separator " "
 
 setw -g status-left \
 '#[bold]#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18],#[fg=color11]} #{session_name} '\
