feat: tmux: simplify theme: move zoom indicator next to pane-index, and minimize padding between window indicators

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -83,7 +83,7 @@ setw -g window-status-format \
 
 setw -g window-status-current-format \
 '#[fg=yellow]#[default]#[bg=color01,bold,fg=color19]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
-'#[fg=color01,bg=color18,bold] #{window_name}#[bg=color18] #{?window_zoomed_flag,󰩨 ,}#[default]'
+'#[fg=color01,bg=color18,bold] #{window_name}#[bg=color18] #[default]'
 
 setw -g window-status-separator " "
 
@@ -98,12 +98,12 @@ setw -g pane-border-line single
 setw -g pane-border-style fg=color08
 setw -g pane-active-border-style fg=color02
 set -sg pane-border-format \
-'#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
+'#{?window_zoomed_flag,#[bg=color18]#[fg=color16] 󰩨 #[default],}#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
 ' #{pane_index} #[default]'\
-'#[align=right]#{?pane_active,#[fg=colour06],}'\
-'#{?pane_active,#[bold],#[fg=color19,bold]}[ #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") ]#[default]'
+''
 
 #setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
+# '#[fg=color01,bg=color18,bold] #{window_name}#[bg=color18] #{?window_zoomed_flag,󰩨 ,}#[default]'
 setw -g status-right ''
 setw -g pane-border-indicators off
 
