--- a/homebrew/_cli/Brewfile
+++ b/homebrew/_cli/Brewfile
@@ -15,6 +15,7 @@ brew "gh"
 brew "git"
 brew "git-delta"
 brew "git-extras"
+brew "gnu-sed"
 brew "gnupg"
 brew "grep"
 brew "htop"
@@ -25,6 +26,7 @@ brew "lazygit"
 brew "ncurses"
 brew "nodenv"
 brew "openssl@1.1"
+brew "ox"
 brew "pandoc"
 brew "perl"
 brew "pyenv"
@@ -32,6 +34,7 @@ brew "pyenv-virtualenv"
 brew "rbenv"
 brew "readline"
 brew "ripgrep"
+brew "rust"
 brew "sd"
 brew "stow"
 brew "telnet"
@@ -46,4 +49,3 @@ brew "yazi"
 brew "yt-dlp"
 brew "zoxide"
 cask "1password-cli"
-
