chore: brew: inventory ithildin

--- a/homebrew/ithildin/Brewfile
+++ b/homebrew/ithildin/Brewfile
@@ -102,6 +102,7 @@ cask "docker"
 cask "fantastical"
 cask "font-jetbrains-mono"
 cask "font-jetbrains-mono-nerd-font"
+cask "font-monaspace-nerd-font"
 cask "google-chrome"
 cask "google-cloud-sdk"
 cask "google-drive"
