feat: tmux: use solid block as fill-character

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -16,6 +16,8 @@ set-window-option -g xterm-keys on
 # ALlows a few things for base16 theming to work better:
 set-option -g allow-passthrough on
 
+set-option -g fill-character █
+
 set-option -g repeat-time 1250
 unbind-key r
 bind-key -N "Reload tmux configuration" r source-file ~/.config/tmux/tmux.conf \; display-message "Configuration reloaded"
@@ -182,3 +184,4 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
 
 # List keys including those without notes
 bind-key ? list-keys -Na
+
