feat: lazygit: use delta as pager

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -9,6 +9,9 @@ keybinding:
     quit: 'Q'
 git:
   mainBranches: ['master', 'main', 'live']
+  paging:
+    colorArg: always
+    pager: delta --paging=never
 customCommands:
   - key: '<c-t>'
     context: global
