feat: lazygit: Use "reverse" style for selections

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -2,6 +2,9 @@
 #
 gui:
   nerdFontsVersion: '3'
+  theme:
+    selectedLineBgColor:
+      - reverse
 os:
   open: 'open {{filename}}'
 keybinding:
