feat: tmux feature to run selection in another pane

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -72,7 +72,7 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe " pbcopy"
 bind-key -T copy-mode-vi c-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe "pbcopy"
-bind-key -T copy-mode-vi G send-keys -X copy-pipe-and-cancel "xargs -I% ~/.config/tmux/runner.zsh %"
+bind-key -T copy-mode-vi G send-keys -X copy-pipe-and-cancel "~/.config/tmux/runner.zsh"
 bind Enter copy-mode
 #setw -g utf8 on
 
