--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -79,6 +79,8 @@ bind Enter copy-mode
 # Basic styles
 set -g status-interval 5
 set -g status-bg color00
+set -g message-line 1
+set -g status 2
 
 #More advanced styles
 setw -g window-status-format \
@@ -123,6 +125,8 @@ bind-key -N "Swap pane" -r / swap-pane
 bind-key -N "Sychronize panes" & set-window-option synchronize-panes
 
 bind-key -N "Kill session..." Q confirm-before -p "Kill session #S? (y/n)" kill-session
+
+bind-key V "splitw 'tmux capture-pane -t ! -p -S - -E - | nvim'"
 
 setw -g window-status-activity-style bg=default,fg=default,blink
 setw -g window-status-bell-style bg=default,fg=red,blink
@@ -187,4 +191,5 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
 
 # List keys including those without notes
 bind-key ? list-keys -Na
-
+set -g status-format[0] "#[align=left range=left #{E:status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[nolist align=right range=right #{E:status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
+set -g status-format[1] "   #[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{E:window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{E:window-status-current-style},default},#{E:window-status-current-style},#{E:window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{E:status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
