--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -12,7 +12,7 @@ keybinding:
   universal:
     quit: 'Q'
 git:
-  mainBranches: ['master', 'main', 'live']
+  mainBranches: ['main', 'master', 'live']
   paging:
     colorArg: always
     pager: delta --paging=never
