--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -92,9 +92,11 @@ setw -g window-status-current-format \
 
 setw -g window-status-separator " "
 
+
+
 setw -g status-left \
-'#[bold]#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18],#[fg=color11]} #{session_name} '\
-'#[default,bold]#{?client_prefix,#[fg=color10],#[fg=color11]}>>  '
+'#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18] ,#[fg=color11] } // #[bold]#{session_name} '\
+'#[default,bold]#{?client_prefix,#[fg=color10],#[fg=color11]} '
 
 setw -g pane-border-status top
 
@@ -103,7 +105,7 @@ setw -g pane-border-line single
 setw -g pane-border-style fg=color08
 setw -g pane-active-border-style fg=color02
 set -sg pane-border-format \
-'#{?window_zoomed_flag,#[bg=color18]#[fg=color16] 󰩨 #[default],}#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
+'#[align=right]#{?window_zoomed_flag,#[bg=color18]#[fg=color16] 󰩨 #[default],}#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
 ' #{pane_index} #[default]'\
 ''
 
@@ -191,5 +193,23 @@ bind-key -N "Popup: Edit & reload tmux configuration" E popup \
 
 # List keys including those without notes
 bind-key ? list-keys -Na
-set -g status-format[0] "#[align=left range=left #{E:status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[nolist align=right range=right #{E:status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
-set -g status-format[1] "   #[norange default]#[list=on align=#{status-justify}]#[list=left-marker]<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index} #{E:window-status-style}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}]#[push-default]#{T:window-status-format}#[pop-default]#[norange default]#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{?#{!=:#{E:window-status-current-style},default},#{E:window-status-current-style},#{E:window-status-style}}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]#{?window_end_flag,,#{window-status-separator}}}#[nolist align=right range=right #{E:status-right-style}]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
+
+# Render just the status-left and status-right on the first status bar
+set -g status-format[0] "#[align=left range=left #{E:status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
+
+# The default window list format, copied here so that it appears on the second status bar instead.
+set -g status-format[1] " #[norange default]#[list=on align=#{status-justify}]#[list=left-marker]
+<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index}u#{E:window-status-style}
+#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}
+#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},
+#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}},
+#{E:window-status-activity-style},}}]#[push-default]
+#{T:window-status-format}#[pop-default]#[norange default]
+#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{
+?#{!=:#{E:window-status-current-style},default},#{E:window-status-current-style},#{E:window-status-style}
+}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}
+#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}},
+#{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},
+#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}
+]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]
+#{?window_end_flag,,#{window-status-separator}}}"
