feat: tmux: set multiple status bars dynamically

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -80,7 +80,7 @@ bind Enter copy-mode
 set -g status-interval 5
 set -g status-bg color00
 set -g message-line 1
-set -g status 2
+set -g status on # See ~/.config/tmux/register-dynamic-style-hooks.zsh for dynamic status line
 
 #More advanced styles
 setw -g window-status-format \
@@ -92,8 +92,6 @@ setw -g window-status-current-format \
 
 setw -g window-status-separator " "
 
-
-
 setw -g status-left \
 '#{?client_prefix,#[bg=color10],#[bg=default]}#{?client_prefix,#[fg=color18] ,#[fg=color11] } // #[bold]#{session_name} '\
 '#[default,bold]#{?client_prefix,#[fg=color10],#[fg=color11]} '
@@ -102,9 +100,7 @@ setw -g pane-border-status top
 
 setw -g pane-border-format ''
 setw -g pane-border-line single
-setw -g pane-border-style fg=color08
-setw -g pane-active-border-style fg=color02
-set -sg pane-border-format \
+set -g pane-border-format \
 '#[align=right]#{?window_zoomed_flag,#[bg=color18]#[fg=color16] 󰩨 #[default],}#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
 ' #{pane_index} #[default]'\
 ''
@@ -213,3 +209,8 @@ set -g status-format[1] " #[norange default]#[list=on align=#{status-justify}]#[
 #{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}
 ]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]
 #{?window_end_flag,,#{window-status-separator}}}"
+
+#setw -g pane-border-style fg=color08
+setw -g pane-active-border-style fg=color11
+
+if-shell '[ -f ~/.config/tmux/register-dynamic-style-hooks.zsh ]' "run-shell '~/.config/tmux/register-dynamic-style-hooks.zsh'"
