--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,4 +1,4 @@
-# vi:syntax=sh
+# vi:syntax=tmux
 
 TMUX_FZF_OPTIONS="-p -w 62% -h 38% -m --preview=''"
 
@@ -101,9 +101,8 @@ setw -g pane-border-status top
 setw -g pane-border-format ''
 setw -g pane-border-line single
 set -g pane-border-format \
-'#[align=right]#{?window_zoomed_flag,#[bg=color18]#[fg=color16] 󰩨 #[default],}#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
-' #{pane_index} #[default]'\
-''
+'#{?#{>:#{window_panes},1},#[align=right]#{?window_zoomed_flag,#[bg=color18]#[fg=color16] 󰩨 #[default],}#{?pane_active,#[bg=color16]#[fg=color15]#[bold],#[fg=color16]}'\
+' #{pane_index} #[default],}'
 
 #setw -g status-right '#[italics]#[bg=color04,fg=black] #(echo "#{pane_current_path}" | sed "s#"^$HOME"#~#") #[default]'
 # '#[fg=color01,bg=color18,bold] #{window_name}#[bg=color18] #{?window_zoomed_flag,󰩨 ,}#[default]'
@@ -194,23 +193,30 @@ bind-key ? list-keys -Na
 set -g status-format[0] "#[align=left range=left #{E:status-left-style}]#[push-default]#{T;=/#{status-left-length}:status-left}#[pop-default]#[norange default]#[]#[push-default]#{T;=/#{status-right-length}:status-right}#[pop-default]#[norange default]"
 
 # The default window list format, copied here so that it appears on the second status bar instead.
-set -g status-format[1] " #[norange default]#[list=on align=#{status-justify}]#[list=left-marker]
-<#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index}u#{E:window-status-style}
-#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}
-#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},
-#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}},
-#{E:window-status-activity-style},}}]#[push-default]
-#{T:window-status-format}#[pop-default]#[norange default]
-#{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{
-?#{!=:#{E:window-status-current-style},default},#{E:window-status-current-style},#{E:window-status-style}
-}#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}
-#{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}},
-#{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},
-#{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}
-]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]
-#{?window_end_flag,,#{window-status-separator}}}"
+# set -g status-format[1] " #[norange default]#[list=on align=#{status-justify}]#[list=left-marker]
+# <#[list=right-marker]>#[list=on]#{W:#[range=window|#{window_index}u#{E:window-status-style}
+# #{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}
+# #{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}}, #{E:window-status-bell-style},
+# #{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},#{!=:#{E:window-status-activity-style},default}},
+# #{E:window-status-activity-style},}}]#[push-default]
+# #{T:window-status-format}#[pop-default]#[norange default]
+# #{?window_end_flag,,#{window-status-separator}},#[range=window|#{window_index} list=focus #{
+# ?#{!=:#{E:window-status-current-style},default},#{E:window-status-current-style},#{E:window-status-style}
+# }#{?#{&&:#{window_last_flag},#{!=:#{E:window-status-last-style},default}}, #{E:window-status-last-style},}
+# #{?#{&&:#{window_bell_flag},#{!=:#{E:window-status-bell-style},default}},
+# #{E:window-status-bell-style},#{?#{&&:#{||:#{window_activity_flag},#{window_silence_flag}},
+# #{!=:#{E:window-status-activity-style},default}}, #{E:window-status-activity-style},}}
+# ]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]
+# #{?window_end_flag,,#{window-status-separator}}}"
+
+# Alternatively, .this is the window list format that FORMATS from the manpage describes,
+# which is more compact.
+set -g status-format[1] " #{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
 
 #setw -g pane-border-style fg=color08
 setw -g pane-active-border-style fg=color11
 
-if-shell '[ -f ~/.config/tmux/register-dynamic-style-hooks.zsh ]' "run-shell '~/.config/tmux/register-dynamic-style-hooks.zsh'"
+set-hook -g after-new-window 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g after-kill-pane 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g window-pane-changed 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
+
