fix: tmux: start with dynamic status logic

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -80,7 +80,7 @@ bind Enter copy-mode
 set -g status-interval 5
 set -g status-bg color00
 set -g message-line 1
-set -g status on # See ~/.config/tmux/register-dynamic-style-hooks.zsh for dynamic status line
+set -g -F status "#{?#{>:#{session_windows},1},2,on}"
 
 #More advanced styles
 setw -g window-status-format \
