fix: tmux: Render window separator in status-format[1]

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -209,9 +209,9 @@ set -g status-format[0] "#[align=left range=left #{E:status-left-style}]#[push-d
 # ]#[push-default]#{T:window-status-current-format}#[pop-default]#[norange list=on default]
 # #{?window_end_flag,,#{window-status-separator}}}"
 
-# Alternatively, .this is the window list format that FORMATS from the manpage describes,
+# Alternatively, .this is based on the window-list format that FORMATS from the manpage describes,
 # which is more compact.
-set -g status-format[1] " #{W:#{E:window-status-format} ,#{E:window-status-current-format} }"
+set -g status-format[1] " #{W:#{E:window-status-format}#{?window_end_flag,,#{window-status-separator}},#{E:window-status-current-format}#{?window_end_flag,,#{window-status-separator}}}"
 
 #setw -g pane-border-style fg=color08
 setw -g pane-active-border-style fg=color11
