feat: tmux: go yellow

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -87,8 +87,8 @@ setw -g window-status-format \
   "#[bg=color19,fg=color00,bold] #{window_index} #[default]#[fg=color00,bold,bg=color18] #{window_name} #[default]"
 
 setw -g window-status-current-format \
-'#[fg=yellow]#[default]#[bg=color01,bold,fg=color19]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
-'#[fg=color01,bg=color18,bold] #{window_name}#[bg=color18] #[default]'
+'#[default]#[bg=color11,bold,fg=color19]#{?pane_synchronized, ↔,} #{window_index} #[default]'\
+'#[fg=color11,bg=color18,bold] #{window_name}#[bg=color18] #[default]'
 
 setw -g window-status-separator " "
 
