--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -219,4 +219,5 @@ setw -g pane-active-border-style fg=color11
 set-hook -g after-new-window 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
 set-hook -g after-kill-pane 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
 set-hook -g window-pane-changed 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g pane-exited 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
 
