feat: homebrew: Install luarocks & imagemagick + add Homebrew lib dir to DYLD_LIBRARY_PATH

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -22,8 +22,10 @@ brew "grep"
 brew "htop"
 brew "httpie"
 brew "hunspell"
+brew "imagemagick"
 brew "jq"
 brew "lazygit"
+brew "luarocks"
 brew "ncurses"
 brew "nodenv"
 brew "openssl@1.1"
