feat: homebrew: install jstkdng/programs/ueberzugpp

--- a/homebrew/_core/Brewfile
+++ b/homebrew/_core/Brewfile
@@ -23,6 +23,7 @@ brew "htop"
 brew "httpie"
 brew "hunspell"
 brew "imagemagick"
+brew "jstkdng/programs/ueberzugpp"
 brew "jq"
 brew "lazygit"
 brew "luarocks"
