style: tmux: use color11 in popup borders

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -176,13 +176,13 @@ bind -N "Switch to session from picker..." C-p display-popup -E \
 # Popups
 unbind-key g
 bind-key -N "Popup: Lazygit" g popup \
-  -h 80% -w 80% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' \
+  -h 80% -w 80% -b rounded -S 'fg=color11' -E -d '#{pane_current_path}' \
   -T '#[bold,align=centre][ Lazygit ]#[default]' \
   "lazygit"
 
 unbind-key E
 bind-key -N "Popup: Edit & reload tmux configuration" E popup \
-  -y 0 -h 80% -w 100% -b rounded -S 'fg=green' -E -d '#{pane_current_path}' \
+  -y 0 -h 80% -w 100% -b rounded -S 'fg=color11' -E -d '#{pane_current_path}' \
   -T '#[bold,align=centre][ TMUX configuration ]#[default]' \
   'zsh -l -c "nvim ~/.config/tmux/tmux.conf && tmux source-file ~/.config/tmux/tmux.conf && tmux display-message Reloaded"'
 
