chore: lazygit: Refer to v0.41.0 YAML schema & config reference link

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,5 +1,6 @@
-# yaml-language-server: $schema=https://raw.githubusercontent.com/jesseduffield/lazygit/master/schema/config.json
+# yaml-language-server: $schema=https://raw.githubusercontent.com/jesseduffield/lazygit/v0.41.0/schema/config.json
 #
+# Configuration Reference: https://github.com/jesseduffield/lazygit/blob/v0.41.0/docs/Config.md
 gui:
   nerdFontsVersion: '3'
   theme:
