feat: lazygit: Prepare spinner config that future LazyGit version will understand

--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -8,6 +8,9 @@ gui:
   theme:
     selectedLineBgColor:
       - reverse
+  # Spinner config will be respected by a future LazyGit release
+  # spinner:
+  #   frames: ['⠋', '⠙', '⠹', '⠸', '⠼', '⠴', '⠦', '⠧', '⠇', '⠏'] 
 os:
   open: 'open {{filename}}'
   editPreset: "nvim"
