--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -80,7 +80,7 @@ bind Enter copy-mode
 set -g status-interval 5
 set -g status-bg color00
 set -g message-line 1
-set -g -F status "#{?#{>:#{session_windows},1},2,on}"
+set -F status "#{?#{>:#{session_windows},1},2,on}"
 
 #More advanced styles
 setw -g window-status-format \
@@ -216,8 +216,8 @@ set -g status-format[1] " #{W:#{E:window-status-format}#{?window_end_flag,,#{win
 #setw -g pane-border-style fg=color08
 setw -g pane-active-border-style fg=color11
 
-set-hook -g after-new-window 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
-set-hook -g after-kill-pane 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
-set-hook -g window-pane-changed 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
-set-hook -g pane-exited 'set -g -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g after-new-window 'set -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g after-kill-pane 'set -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g window-pane-changed 'set -F status "#{?#{>:#{session_windows},1},2,on}"'
+set-hook -g pane-exited 'set -F status "#{?#{>:#{session_windows},1},2,on}"'
 
