--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,3 @@
-[submodule "zprezto"]
-	path = zsh/.zprezto
-	url = ssh://git@github.com:bezhermoso/prezto.git
-	branch = master
 [submodule "base16-shell"]
 	path = base16-shell
 	url = https://github.com/tinted-theming/base16-shell.git
@@ -22,3 +18,6 @@
 	path = .config/nvim/lua/dev/todos-lualine.nvim
 	url = git@github.com:bezhermoso/todos-lualine.nvim
 	branch = main
+[submodule "zsh/.zprezto"]
+	path = zsh/.zprezto
+	url = git@github.com:bezhermoso/prezto.git
